--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -36,7 +36,7 @@ colors:
  
   # Normal colors
   normal:
-    black:   '0x000000'
+    black:   '0x44475a'
     red:     '0xff5555'
     green:   '0x50fa7b'
     yellow:  '0xf1fa8c'
@@ -47,7 +47,7 @@ colors:
  
   # Bright colors
   bright:
-    black:   '0x555555'
+    black:   '0x44475a'
     red:     '0xff5555'
     green:   '0x50fa7b'
     yellow:  '0xf1fa8c'
