--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,9 @@ set -g @dracula-show-left-icon session
 # set -g @plugin 'nordtheme/tmux'
 
 set -g status-position top
+# set-window-option -g pane-border-status top
+# set-window-option -g pane-border-format ''
+
 #--------------------------
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -24,6 +27,9 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# Mouse scrolling
+setw -g mouse on
 
 # set vi-mode
 set-window-option -g mode-keys vi
