--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,22 +5,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "christoomey/vim-tmux-navigator"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'dracula/tmux'
-# dracula options
 set -g @dracula-plugins " "
 set -g @dracula-show-left-icon session
-# set -g @dracula-show-powerline true
-# set -g @dracula-show-flags true
-
-# set -g @plugin 'nordtheme/tmux'
 
 set -g status-position top
-# set-window-option -g pane-border-status top
-# set-window-option -g pane-border-format ''
 
-#--------------------------
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -as terminal-overrides ',*:indn@'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -31,17 +22,10 @@ set-option -g renumber-windows on
 # Mouse scrolling
 setw -g mouse on
 
-# set vi-mode
-set-window-option -g mode-keys vi
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-# Rebind tmux keybinding
+# Rebind tmux keybinding to ctrl+a
 unbind C-b
 set-option -g prefix C-a
 
