--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,9 @@ set -g @dracula-show-left-icon session
 
 set -g status-position top
 
+# tmux nvimtree scrolling problem in xterm (unsolvable yet)
 set -as terminal-overrides ',*:indn@'
+set -g status-right "%Y-%m-%d %H:%M:%S"
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -21,6 +23,7 @@ set-option -g renumber-windows on
 
 # Mouse scrolling
 setw -g mouse on
+
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -34,3 +37,8 @@ bind -n M-K next-window
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# rename windows to current path
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
