--- a/i3status/i3status.conf
+++ b/i3status/i3status.conf
@@ -11,7 +11,7 @@ general {
         interval = 5
 }
 
-order += "ipv6"
+# order += "ipv6"
 order += "wireless _first_"
 # order += "ethernet _first_"
 order += "battery all"
@@ -21,7 +21,7 @@ order += "memory"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
+        format_up = "Wireless:%quality at %essid"
         format_down = "W: down"
 }
 
@@ -44,5 +44,6 @@ memory {
 }
 
 tztime local {
-        format = " %A,  %V %B %Y   %H:%M"
+        format = " %A,  %d %B %Y   %H:%M"
+        timezone = "Asia/Karachi"
 }
